--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     </head>
     <body>
-        <h1>Hello there my great World!</h1>
+        <h1>Hello there World!</h1>
         <a href="helloservlet">servlet</a>
     </body>
 </html>
